continue attempting to fix hero image display on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -39,9 +39,9 @@ body {
 
 @media only screen and (max-width:600px) {
   .hero {
+    background-position: top;
     height: 100vw;
     width: auto;
-    min-height: none;
   }
 }
 
